Header and footer no longer overlaps content

--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -2,8 +2,13 @@
 html {
   font-size: 14px;
 }
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
   }
+}
+
+main {
+  padding-top: 75px; /* avoid overlapping header*/
 }
